Increase default value of pubsub backoffPolicy totalBackoff (close #187)

--- a/pubsub/src/main/resources/application.conf
+++ b/pubsub/src/main/resources/application.conf
@@ -7,8 +7,11 @@ collector {
           backoffPolicy {
             minBackoff = 1000
             maxBackoff = 1000
-            totalBackoff = 10000
+            totalBackoff = 9223372036854
             multiplier = 2
+            initialRpcTimeout = 10000
+            maxRpcTimeout = 10000
+            rpcTimeoutMultiplier = 2
           }
         }
 
