Improve graceful shutdown (close #12)

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -1,5 +1,8 @@
 enableDefaultRedirect = false
 enableStartupChecks = true
+terminationDeadline = 10.seconds
+preTerminationPeriod = 10.seconds
+preTerminationUnhealthy = false
 
 paths {
 
