Change default telemetry url (close #209)

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -71,7 +71,7 @@ telemetry {
     disable = false
     interval = 60 minutes
     method = POST
-    url = collector-g.snowplowanalytics.com
+    url = telemetry-g.snowplowanalytics.com
     port = 443
     secure = true
 }
