--- a/stdout/src/main/resources/application.conf
+++ b/stdout/src/main/resources/application.conf
@@ -25,6 +25,7 @@ akka {
     parsing {
       max-uri-length = 32768
       uri-parsing-mode = relaxed
+      illegal-header-warnings = off
     }
 
     max-connections = 2048
