--- a/kinesis/src/main/resources/application.conf
+++ b/kinesis/src/main/resources/application.conf
@@ -35,6 +35,7 @@ akka {
     parsing {
       max-uri-length = 32768
       uri-parsing-mode = relaxed
+      illegal-header-warnings = off
     }
 
     max-connections = 2048
