--- a/sqs/src/main/resources/application.conf
+++ b/sqs/src/main/resources/application.conf
@@ -34,6 +34,7 @@ akka {
     parsing {
       max-uri-length = 32768
       uri-parsing-mode = relaxed
+      ignore-illegal-header-for = ["user-agent"]
     }
 
     max-connections = 2048
