--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,45 +6,6 @@ on:
       - '*'
 
 jobs:
-  deploy_to_github:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: coursier/cache-action@v3
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Build artifacts
-        run: |
-          sbt 'project kafka' assembly
-          sbt 'project kinesis' assembly
-          sbt 'project nsq' assembly
-          sbt 'project pubsub' assembly
-          sbt 'project sqs' assembly
-          sbt 'project stdout' assembly
-      - name: Get current version
-        id: ver
-        run: |
-          export PROJECT_VERSION=$(sbt "project core" version -Dsbt.log.noformat=true | perl -ne 'print "$1\n" if /info.*(\d+\.\d+\.\d+[^\r\n]*)/' | tail -n 1 | tr -d '\n')
-          echo "::set-output name=project_version::$PROJECT_VERSION"
-      - name: Create GitHub release and attach artifacts
-        uses: softprops/action-gh-release@v1
-        with:
-          draft: true
-          prerelease: true
-          name: ${{ steps.ver.outputs.project_version }}
-          tag_name: ${{ steps.ver.outputs.project_version }}
-          files: |
-            kafka/target/scala-2.12/snowplow-stream-collector-kafka-${{ steps.ver.outputs.project_version }}.jar
-            kinesis/target/scala-2.12/snowplow-stream-collector-kinesis-${{ steps.ver.outputs.project_version }}.jar
-            nsq/target/scala-2.12/snowplow-stream-collector-nsq-${{ steps.ver.outputs.project_version }}.jar
-            pubsub/target/scala-2.12/snowplow-stream-collector-google-pubsub-${{ steps.ver.outputs.project_version }}.jar
-            sqs/target/scala-2.12/snowplow-stream-collector-sqs-${{ steps.ver.outputs.project_version }}.jar
-            stdout/target/scala-2.12/snowplow-stream-collector-stdout-${{ steps.ver.outputs.project_version }}.jar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
   deploy_to_docker:
     runs-on: ubuntu-latest
     strategy:
@@ -62,7 +23,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
 
       - name: Get current version
         id: ver
@@ -79,7 +40,7 @@ jobs:
         with:
           images: snowplow/scala-stream-collector-${{ matrix.platform }}
           tags: |
-            type=raw,value=latest,enable=${{ !contains(steps.ver.outputs.project_version, 'rc') }}
+            type=raw,value=latest,enable=false
             type=raw,value=${{ steps.ver.outputs.project_version }}
           flavor: |
             latest=false
