Replace all metrics implementations with statsd (close #223)

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -47,10 +47,6 @@ p3p {
     CP = "NOI DSP COR NID PSA OUR IND COM NAV STA"
 }
 
-prometheusMetrics {
-    enabled = false
-}
-
 rootResponse {
     enabled = false
     statusCode = 302
@@ -74,6 +70,17 @@ telemetry {
     url = telemetry-g.snowplowanalytics.com
     port = 443
     secure = true
+}
+
+monitoring.metrics.statsd {
+  enabled = false
+  # StatsD metric reporting protocol configuration
+  hostname = localhost
+  port = 8125
+  # Required, how frequently to report metrics
+  period = "10 seconds"
+  # Optional, override the default metric prefix
+  # "prefix": "snowplow.collector"
 }
 
 streams {
