Send warmup requests to self on startup (close #249)

--- a/core/src/main/resources/reference.conf
+++ b/core/src/main/resources/reference.conf
@@ -86,3 +86,11 @@ monitoring.metrics.statsd {
 streams {
     useIpAddressAsPartitionKey = false
 }
+
+experimental {
+  warmup {
+    enable = false
+    numRequests = 2000
+    maxConnections = 2000
+  }
+}
