--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -7,7 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: coursier/cache-action@v3
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
@@ -22,6 +21,7 @@ jobs:
         run: | 
           (cd integration && docker-compose -f ./docker-compose.yml up -d) 
           sleep 20
+          docker-compose logs broker
           echo "waiting for kafka to be ready"
           docker exec broker cub kafka-ready -b broker:9092 1 120
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic good && \
