--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -29,17 +29,9 @@ jobs:
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
-          output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
-          echo "::set-output name=exit_code::$?"
-      - name: Test anonymous tracking
-        id: anonymous
-        if: ${{ steps.non-anonymous.outputs.exit_code == 0 }}
-        run: |
-          set +e
-          output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2 -H 'SP-Anonymous: *' -d '{}' 2>&1 | grep -q 'Set-Cookie')
-          echo "::set-output name=exit_code::$?"
+          curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1
       - name: Integration get output
-        run: make integration-success-output
+        run: docker exec broker kafka-consumer --topic=good --from-beginning --bootstrap-server broker:9092
       - name: Report outcome
         if: ${{ steps.non-anonymous.outputs.exit_code == 0 && steps.anonymous.outputs.exit_code == 1 }}
         run: echo "All tests successful!"
