--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: coursier/cache-action@v3
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
@@ -29,7 +30,8 @@ jobs:
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
-          curl -X POST -i http://127.0.0.1:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1
+          output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
+          echo "::set-output name=exit_code::$?"
       - name: Integration get output
         run: docker exec broker kafka-consumer --topic=good --from-beginning --bootstrap-server broker:9092
       - name: Report outcome
