--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -18,8 +18,6 @@ jobs:
         run: docker run -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config.hocon
       - name: Allow time for collector to start
         run: sleep 30
-      - name: Get docekr ls
-        run: docker container ls
       - name: Get collector docker container logs
         run: docker logs scala-stream-collector-kafka
       - name: Setup integration resources
@@ -34,7 +32,7 @@ jobs:
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
-          output=$(curl -X POST -i http://localhost:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
+          output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
           echo "::set-output name=exit_code::$?"
       - name: Integration get output
         run: docker exec broker kafka-consumer --topic=good --from-beginning --bootstrap-server broker:9092
