--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -27,6 +27,8 @@ jobs:
           docker exec broker cub kafka-ready -b broker:9092 1 120
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic good && \
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic bad
+      - name: Get collector docker container logs
+        run: docker ps
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
