--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -27,6 +27,8 @@ jobs:
         run: docker run --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config.hocon
       - name: Allow time for collector to start
         run: sleep 30
+      - name: Get collector docker container logs
+        run: docker logs collector
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
