--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -24,7 +24,7 @@ jobs:
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic good && \
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic bad
       - name: Run Docker image
-        run: docker run --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config.hocon
+        run: docker run --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config.hocon --network="host"
       - name: Allow time for collector to start
         run: sleep 30
       - name: Get collector docker container logs
