--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -7,10 +7,12 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    network_mode: "host"
 
   broker:
     image: confluentinc/cp-kafka:7.0.1
     container_name: broker
+    network_mode: "host"
     ports:
       - "9092:9092"
     depends_on:
