--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
-    network_mode: "host"
+    networks:
+      - net1
 
   broker:
     image: confluentinc/cp-kafka:7.0.1
     container_name: broker
-    network_mode: "host"
     ports:
       - "9092:9092"
     depends_on:
@@ -22,3 +22,8 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - net1
+
+networks:
+  net1:
