--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Test non-anonymous tracking
         id: non-anonymous
         run: |
-          output=$(curl -X POST -i http://collector:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
+          output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
           echo "::set-output name=exit_code::$?"
       - name: Integration get output
         run: docker exec broker kafka-consumer --topic=good --from-beginning --bootstrap-server broker:9092
