--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -39,7 +39,7 @@ jobs:
           output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d '{}' 2>&1 | grep -q 'Set-Cookie')
           echo "::set-output name=exit_code::$?"
       - name: docker ls
-        run: docker exec broker ls -l
+        run: docker exec -W /bin broker ls -l
       - name: Integration get output
         run: docker exec -w /bin broker "kafka-consumer" --topic=good --from-beginning --bootstrap-server broker:9092
       - name: Report outcome
