--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -21,6 +21,7 @@ jobs:
           (cd integration && docker-compose logs broker) 
           echo "waiting for kafka to be ready"
           docker exec broker cub kafka-ready -b broker:9092 1 120
+          echo "kafka is ready, proceeding...
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic good && \
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic bad
       - name: Network ls
