--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -21,7 +21,6 @@ jobs:
           (cd integration && docker-compose logs broker) 
           echo "waiting for kafka to be ready"
           docker exec broker cub kafka-ready -b broker:9092 1 120
-          echo "kafka is ready, proceeding...
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic good && \
           docker exec broker kafka-topics --bootstrap-server broker:9092 --create --topic bad
       - name: Network ls
@@ -41,6 +40,10 @@ jobs:
         run: |
           output=$(curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d 'test' 2>&1 | grep -q 'Set-Cookie')
           echo "::set-output name=exit_code::$?"
+      - name: sleep
+        run: sleep 10
+      - name: log
+        run: docker logs collector
       - name: Consume
         id: consume
         run: |
