--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -2,26 +2,29 @@ version: "3"
 
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.0.1
+    image: wurstmeister/zookeeper
     container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    restart: unless-stopped
     networks:
       - net1
 
   broker:
-    image: confluentinc/cp-kafka:7.0.1
+    image: wurstmeister/kafka:latest
     container_name: broker
     ports:
-      - "9092:9092"
-    depends_on:
-      - zookeeper
+      - "9092"
+    hostname: "broker"
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://localhost:9092'
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      DOCKER_API_VERSION: 1.22
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://broker:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092
+      KAFKA_CREATE_TOPICS: "good:1:1,bad:1:1"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
     networks:
       - net1
 
