--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Publish Docker image
         run: sbt 'project kafka; set Docker / version := "0.0.0"' docker:publishLocal
       - name: Run integration test
-        run: ./"$PWD"/.github/workflows/integration_tests/kafka/kafka.sh
+        run: sh "$PWD"/.github/workflows/integration_tests/kafka/kafka.sh
