added oversized test

--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -30,7 +30,8 @@ jobs:
       - name: Stop Docker containers
         run: docker stop $(docker ps -aq)
 
-  run_kafka_test_2:
+  # tests that oversized messages go to the bad topic
+  kafka_success_bad_topic_oversized:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -47,12 +48,12 @@ jobs:
           sleep 10
       - name: Run collector
         run: |
-          docker run --network="integration_net1" --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config.hocon
+          docker run --network="integration_net1" --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config_bad.hocon
           sleep 15
           docker logs collector
       - name: Send good event to collector
         run: curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d 'test' 2>&1 | grep -q 'Set-Cookie'
       - name: Consume good event from Kafka
-        run: timeout 5 docker exec -w /bin broker kafka-console-consumer.sh --topic=good --from-beginning --bootstrap-server 0.0.0.0:9092 | grep -q "test"
+        run: timeout 5 docker exec -w /bin broker kafka-console-consumer.sh --topic=bad --from-beginning --bootstrap-server 0.0.0.0:9092 | grep -q "test"
       - name: Stop Docker containers
         run: docker stop $(docker ps -aq)
