added oversized test

--- a/.github/workflows/kafka-test.yml
+++ b/.github/workflows/kafka-test.yml
@@ -51,9 +51,9 @@ jobs:
           docker run --network="integration_net1" --name collector -d -v "$PWD"/.github/workflows/kafka-collector-config:/snowplow/config -p 12345:12345 snowplow/scala-stream-collector-kafka:0.0.0 --config /snowplow/config/config_bad.hocon
           sleep 15
           docker logs collector
-      - name: Send good event to collector
+      - name: Send oversized event to collector
         run: curl -X POST -i http://0.0.0.0:12345/com.snowplowanalytics.snowplow/tp2  -d 'test' 2>&1 | grep -q 'Set-Cookie'
-      - name: Consume good event from Kafka
+      - name: Consume bad event from Kafka
         run: timeout 5 docker exec -w /bin broker kafka-console-consumer.sh --topic=bad --from-beginning --bootstrap-server 0.0.0.0:9092 | grep -q "test"
       - name: Stop Docker containers
         run: docker stop $(docker ps -aq)
